# solitaire-game

./: Makefile  README.md  licence  pyproject.toml
doc/: doc_game.excalidraw
solitaire_game/: __init__.py  game.py  game_ui.py  main.py
