[build-system]
requires      = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "solitaire-game"
dynamic = ["version"]
authors = [
    {name = "4sushi"},
]
description = "Solitaire game (klondike), made with python & curses. Play in the terminal. For Linux, Mac OS and Windows."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["game", "klondike", "solitaire", "curses"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['windows-curses >= 2.3.2 ; platform_system == "Windows"']

[project.scripts]
solitaire-game = "solitaire_game.main:main"
solitaire = "solitaire_game.main:main"

[project.urls]
Homepage = "https://github.com/4sushi/solitaire-game"

[tool.setuptools_scm]
